# ChessGame

./: CMakeLists.txt  ChessGame.cpp  ChessGame.hpp  README.md
Include/: AI_player.hpp  Board.hpp  EndingSprite.hpp  IRenderable.hpp  Local_player.hpp  MouseCoord.hpp  Pawn.hpp  RenderSystem.hpp  UI_helper.hpp  constants.hpp
source/: AI_player.cpp  Board.cpp  EndingSprite.cpp  Local_player.cpp  MouseCoord.cpp  Pawn.cpp  RenderSystem.cpp  UI_helper.cpp
